--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,3 +10,11 @@ h1{
 label,button {
 	display:block;
 }
+.icon-flag {
+    display: inline-block;
+    height: 14px;
+    width: 20px
+}
+.ember-power-select {
+	width:10%;
+}
